--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,43 @@
-﻿# Visual Studio
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Linker files
+*.ilk
+
+# Debugger Files
+*.pdb
 .vs/
-.vsconfig
-*.sln.docstates
 
-# Usuario específico de VS
-*.suo
-*.user
-*.userosscache
-*.sln.docstates
 
-# Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
-bld/
-[Bb]in/
-[Oo]bj/
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
 
-# Visual Studio específico
-.vs/
-.vs/NexumApp.slnx/
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# debug information files
+*.dwo
