--- a/NexumApp/App.config
+++ b/NexumApp/App.config
@@ -1,73 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-<<<<<<< HEAD
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <startup>
+  
+  <startup> 
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
-  <!-- URL del API PHP cuando esté listo (usar en AuthService) -->
-  <appSettings>
-    <add key="ApiBaseUrl" value="http://localhost/api/" />
-    <add key="UsarApiPHP" value="false" />
-  </appSettings>
+  
+  <connectionStrings>
+    <add name="nexumdb" connectionString="server=localhost;port=3306;database=nexumdb;uid=root;pwd=;" providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
+  
   <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=8.0.33.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
-      </provider></providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=8.0.33.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </providers>
   </entityFramework>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.5.0" newVersion="4.0.5.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.3.0" newVersion="6.0.3.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.5.0" newVersion="4.0.5.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
-=======
-	<configSections>
-		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-	</configSections>
-
-	<connectionStrings>
-		<add name="nexumdb"
-			 connectionString="server=localhost;port=3306;database=nexumdb;uid=root;pwd=;"
-			 providerName="MySql.Data.MySqlClient" />
-	</connectionStrings>
-
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-	</startup>
-
-	<entityFramework>
-		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
-		<providers>
-			<provider invariantName="MySql.Data.MySqlClient"
-					  type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework" />
-			<provider invariantName="System.Data.SqlClient"
-					  type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-		</providers>
-	</entityFramework>
-
-	<system.data>
-		<DbProviderFactories>
-			<remove invariant="MySql.Data.MySqlClient" />
-			<add name="MySQL Data Provider"
-				 invariant="MySql.Data.MySqlClient"
-				 description=".NET Framework Data Provider for MySQL"
-				 type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data" />
-		</DbProviderFactories>
-	</system.data>
->>>>>>> 0e7654f089c459908e1e4da6cea6219e81f2e458
+  
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=8.0.33.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data>
 </configuration>
