--- a/NexumApp/NexumApp.csproj
+++ b/NexumApp/NexumApp.csproj
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -13,8 +12,6 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,62 +33,59 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BCrypt.Net-Next, Version=4.1.0.0, Culture=neutral, PublicKeyToken=1e11be04b6288443, processorArchitecture=MSIL">
+    <Reference Include="BCrypt.Net-Next">
       <HintPath>packages\BCrypt.Net-Next.4.1.0\lib\net472\BCrypt.Net-Next.dll</HintPath>
     </Reference>
-    <Reference Include="BouncyCastle.Crypto, Version=1.9.0.0, Culture=neutral, PublicKeyToken=0e99375e54769942, processorArchitecture=MSIL">
+    <Reference Include="BouncyCastle.Crypto">
       <HintPath>packages\Portable.BouncyCastle.1.9.0\lib\net40\BouncyCastle.Crypto.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+    <Reference Include="EntityFramework">
       <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+    <Reference Include="EntityFramework.SqlServer">
       <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="Google.Protobuf, Version=3.21.9.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
+    <Reference Include="Google.Protobuf">
       <HintPath>packages\Google.Protobuf.3.21.9\lib\net45\Google.Protobuf.dll</HintPath>
     </Reference>
-    <Reference Include="K4os.Compression.LZ4, Version=1.3.5.0, Culture=neutral, PublicKeyToken=2186fa9121ef231d, processorArchitecture=MSIL">
+    <Reference Include="K4os.Compression.LZ4">
       <HintPath>packages\K4os.Compression.LZ4.1.3.5\lib\net462\K4os.Compression.LZ4.dll</HintPath>
     </Reference>
-    <Reference Include="K4os.Compression.LZ4.Streams, Version=1.3.5.0, Culture=neutral, PublicKeyToken=2186fa9121ef231d, processorArchitecture=MSIL">
+    <Reference Include="K4os.Compression.LZ4.Streams">
       <HintPath>packages\K4os.Compression.LZ4.Streams.1.3.5\lib\net462\K4os.Compression.LZ4.Streams.dll</HintPath>
     </Reference>
-    <Reference Include="K4os.Hash.xxHash, Version=1.0.8.0, Culture=neutral, PublicKeyToken=32cd54395057cec3, processorArchitecture=MSIL">
+    <Reference Include="K4os.Hash.xxHash">
       <HintPath>packages\K4os.Hash.xxHash.1.0.8\lib\net462\K4os.Hash.xxHash.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=8.0.33.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+    <Reference Include="MySql.Data">
       <HintPath>packages\MySql.Data.8.0.33\lib\net462\MySql.Data.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data.EntityFramework, Version=8.0.33.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+    <Reference Include="MySql.Data.EntityFramework">
       <HintPath>packages\MySql.Data.EntityFramework.8.0.33\lib\net462\MySql.Data.EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Buffers, Version=4.0.5.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+    <Reference Include="System.Buffers">
       <HintPath>packages\System.Buffers.4.6.1\lib\net462\System.Buffers.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.IO.Pipelines, Version=5.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+    <Reference Include="System.IO.Pipelines">
       <HintPath>packages\System.IO.Pipelines.5.0.2\lib\net461\System.IO.Pipelines.dll</HintPath>
     </Reference>
-    <Reference Include="System.Management" />
-    <Reference Include="System.Memory, Version=4.0.5.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+    <Reference Include="System.Memory">
       <HintPath>packages\System.Memory.4.6.3\lib\net462\System.Memory.dll</HintPath>
     </Reference>
     <Reference Include="System.Numerics" />
-    <Reference Include="System.Numerics.Vectors, Version=4.1.6.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+    <Reference Include="System.Numerics.Vectors">
       <HintPath>packages\System.Numerics.Vectors.4.6.1\lib\net462\System.Numerics.Vectors.dll</HintPath>
     </Reference>
-    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=6.0.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+    <Reference Include="System.Runtime.CompilerServices.Unsafe">
       <HintPath>packages\System.Runtime.CompilerServices.Unsafe.6.1.2\lib\net462\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
-    <Reference Include="System.Security" />
-    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+    <Reference Include="System.Threading.Tasks.Extensions">
       <HintPath>packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -104,9 +98,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\NexumDbContext.cs" />
-    <Compile Include="Forms\Admin\FrmGestionUsuarios.cs">
+    <Compile Include="Forms\Admin\FrmDashboardAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\Admin\FrmDashboardAdmin.Designer.cs">
+      <DependentUpon>FrmDashboardAdmin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Admin\FrmGestionUsuarios.cs" />
     <Compile Include="Forms\Admin\FrmGestionUsuarios.Designer.cs">
       <DependentUpon>FrmGestionUsuarios.cs</DependentUpon>
     </Compile>
@@ -117,73 +115,52 @@
     <Compile Include="Forms\Auth\FrmLogin.Designer.cs">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Auth\FrmRegistro.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Forms\Auth\FrmRegistro.cs" />
     <Compile Include="Forms\Auth\FrmRegistro.Designer.cs">
       <DependentUpon>FrmRegistro.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Cuentas\FrmAbrirCuenta.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Forms\Cuentas\FrmAbrirCuenta.cs" />
     <Compile Include="Forms\Cuentas\FrmAbrirCuenta.Designer.cs">
       <DependentUpon>FrmAbrirCuenta.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Cuentas\FrmDetalleCuenta.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Forms\Cuentas\FrmDetalleCuenta.cs" />
     <Compile Include="Forms\Cuentas\FrmDetalleCuenta.Designer.cs">
       <DependentUpon>FrmDetalleCuenta.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Cuentas\FrmMisCuentas.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Forms\Cuentas\FrmMisCuentas.cs" />
     <Compile Include="Forms\Cuentas\FrmMisCuentas.Designer.cs">
       <DependentUpon>FrmMisCuentas.cs</DependentUpon>
     </Compile>
-<<<<<<< HEAD
-    <Compile Include="Forms\Movimientos\FrmHistorialMovimientos.cs">
-      <SubType>Form</SubType>
-    </Compile>
-=======
-    <Compile Include="Forms\FrmHome\FrmHome1.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Forms\Movimientos\FrmHistorialMovimientos.cs" />
->>>>>>> 0e7654f089c459908e1e4da6cea6219e81f2e458
     <Compile Include="Forms\Movimientos\FrmHistorialMovimientos.Designer.cs">
       <DependentUpon>FrmHistorialMovimientos.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Movimientos\FrmIngresarEfectivo.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Forms\Movimientos\FrmIngresarEfectivo.cs" />
     <Compile Include="Forms\Movimientos\FrmIngresarEfectivo.Designer.cs">
       <DependentUpon>FrmIngresarEfectivo.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Movimientos\FrmRetirarEfectivo.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Forms\Movimientos\FrmRetirarEfectivo.cs" />
     <Compile Include="Forms\Movimientos\FrmRetirarEfectivo.Designer.cs">
       <DependentUpon>FrmRetirarEfectivo.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Principal\FrmDashboard.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Forms\Principal\FrmDashboard.cs" />
     <Compile Include="Forms\Principal\FrmDashboard.Designer.cs">
       <DependentUpon>FrmDashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Principal\FrmDashboardUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Principal\FrmDashboardUsuario.Designer.cs">
+      <DependentUpon>FrmDashboardUsuario.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Principal\FrmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Transferencias\FrmNuevaTransferencia.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Forms\Transferencias\FrmNuevaTransferencia.cs" />
     <Compile Include="Forms\Transferencias\FrmNuevaTransferencia.Designer.cs">
       <DependentUpon>FrmNuevaTransferencia.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Transferencias\FrmTransferencias.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Forms\Transferencias\FrmTransferencias.cs" />
     <Compile Include="Forms\Transferencias\FrmTransferencias.Designer.cs">
       <DependentUpon>FrmTransferencias.cs</DependentUpon>
     </Compile>
@@ -202,9 +179,6 @@
     <Compile Include="Services\CuentaService.cs" />
     <Compile Include="Services\MovimientoService.cs" />
     <Compile Include="Services\TransferenciaService.cs" />
-    <EmbeddedResource Include="Forms\Auth\FrmLogin.resx">
-      <DependentUpon>FrmLogin.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -232,14 +206,9 @@
     <None Include="Resources\logo.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Resources\background.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>Este proyecto hace referencia a los paquetes NuGet que faltan en este equipo. Use la restauración de paquetes NuGet para descargarlos. Para obtener más información, consulte http://go.microsoft.com/fwlink/?LinkID=322105. El archivo que falta es {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
-    <Error Condition="!Exists('packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
-  </Target>
-  <Import Project="packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
 </Project>
